nobody saw that, fixed some weird image stuff that was messing up on mobile

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -28,14 +28,14 @@
 
 @include for-small-window-only {
   .footer {
-    padding-left: 8rem;
-    padding-right: 8rem;
+    // padding-left: 8rem;
+    // padding-right: 8rem;
   }
 }
 
 @include for-desktop-up {
   .footer {
-    padding-left: 13rem;
-    padding-right: 13rem;
+    // padding-left: 13rem;
+    // padding-right: 13rem;
   }
 }
