--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -25,14 +25,14 @@
 
 @include for-small-window-only {
   .main {
-    padding-left: 8rem;
-    padding-right: 8rem;
+    // padding-left: 8rem;
+    // padding-right: 8rem;
   }
 }
 
 @include for-desktop-up {
   .main {
-    padding-left: 13rem;
-    padding-right: 13rem;
+    // padding-left: 13rem;
+    // padding-right: 13rem;
   }
 }
